[dcd] Added droid-hal-laurel_sprout-detritus to patterns

--- a/patterns/jolla-configuration-laurel_sprout.yaml
+++ b/patterns/jolla-configuration-laurel_sprout.yaml
@@ -2,5 +2,6 @@ Description: Pattern with packages for laurel_sprout configurations
 Name: jolla-configuration-laurel_sprout
 Requires:
 - patterns-sailfish-device-configuration-laurel_sprout
+- droid-hal-laurel_sprout-detritus
 
 Summary: Jolla Configuration laurel_sprout
